--- a/05-Programming.Rmd
+++ b/05-Programming.Rmd
@@ -8,12 +8,22 @@ library("mosaicData", lib.loc = "~/R/library")
 nbins <- 10
 
 #Task 2
-evenly_spaced <- c(min(Galton$height),max(Galton$height), nbins + 1)
+evenly_spaced <- seq(min(Galton$height),max(Galton$height), 
+                     length = nbins + 1)
 #SEND HELP
 
 #Task 3
+bin_counts <- cut(Galton$height, evenly_spaced)
+bin_counts <- table(bin_counts)
 ```
 
+```{r}
+hist_basics <- data.frame(xL = evenly_spaced[-length(evenly_spaced)],
+                          xR = evenly_spaced[-1], 
+                          count = as.numeric(bin_counts))
+
+hist_basics
+```
 
 
 ## Test statements
