--- a/08-Programming.Rmd
+++ b/08-Programming.Rmd
@@ -31,11 +31,28 @@ load(url("http://tiny.cc/dcf/Taxi_trips.rda"))
 
 waiting_fare <- Taxi_trips$fare_amount - (Taxi_trips$base_fare + Taxi_trips$per_mile*Taxi_trips$trip_distance)
 
+exp_waiting_fare <- dexp(waiting_fare)
+
 taxi_likelihood <- function(params){
   base_fare = params[1]
   per_mile = params[2]
   params = params[3]
+  
+  sum(log(dexp(Taxi_trips$fare_amount - (base_fare + per_mile*params))))
 }
+
+taxi_likelihood_test <- taxi_likelihood(c(base_fare = 1, per_mile = 1, params = 1/3))
+taxi_likelihood_test
+
+test_params <- c(1,1,1/3)
+best <- optim(test_params,taxi_likelihood, control = list(fnscale = -1))
+best
+
+plot(Taxi_trips$fare_amount~Taxi_trips$trip_distance)
+mod1 <- lm(Taxi_trips$fare_amount ~ Taxi_trips$trip_distance)
+abline(mod1, col = "red")
+
+
 ```
 
 
