--- a/11-Programming.Rmd
+++ b/11-Programming.Rmd
@@ -2,6 +2,27 @@
 
 Your work goes here ...
 
+```{r}
+Sigma <- cbind(c(1.0, -0.7), c(-0.7, 1.0))
+Sigma
+Sigma_inv <- solve(Sigma)
+Sigma_inv
+test_inverse <- Sigma * Sigma_inv
+
+A <- chol(Sigma)
+A
+t(A)
+```
+```{r}
+x1 <- rnorm(10)
+x2 <- rnorm(10)
+
+x1 <- cbind(x1)
+x2 <- cbind(x2)
+
+inner_product <- t(x1) %*% x2
+```
+
 
 
 ## Test statements
