--- a/14-Programming.Rmd
+++ b/14-Programming.Rmd
@@ -2,6 +2,18 @@
 
 Your work goes here ...
 
+```{r}
+#GenCont <- read.csv("http://tiny.cc/dcf/GenCont.csv")
+
+#training_response <- sample(GenCont$Phenotypes, size = length(GenCont)/2)
+#inds <- c(2:ncol(GenCont)
+#training_predictors <- sample(inds, size = length(GenCont)/2)
+#testing_response <- sample(GenCont$Phenotypes, size = length(GenCont)/2)
+#testing_predictors <- sample(inds, size = length(GenCont)/2)
+#compare_ols_ridge <- function(responses, predictors, lambda=1){
+  # your statements will go here
+}
+```
 
 
 ## Test statements
