--- a/16-Programming.Rmd
+++ b/16-Programming.Rmd
@@ -2,6 +2,33 @@
 
 Your work goes here ...
 
+```{r}
+#
+#data <- x
+
+#my_knots <- function(x,k){
+ # evenly_spaced <- (1:k)/(k+1)
+  #knots <- quantile(x, probs = evenly_spaced)
+  #return(knots)
+#}
+
+#basis_functions <- function(x)
+ # x_1 = 1
+ # x2 = x^2
+ # x3 = x^3
+  #functions <- c(x_1, x2, x3)
+  #return(basis_functions)
+
+#MM <- cbind(1, x, x^2, x^3)
+  #for(i in my_knots(x,k)){
+   # new_vector <- (x - my_knots(x,k))^3
+  #}
+#MM <- cbind(MM, new_vector)
+
+#spline_model_matrix <- function(x, knots)
+#spline_coefs <- coef(lm(y ~ MM))
+```
+
 
 
 ## Test statements
